--- a/app/assets/stylesheets/page_sections/_menu.scss
+++ b/app/assets/stylesheets/page_sections/_menu.scss
@@ -5,7 +5,7 @@
     }
 
     @include media($tablet) {
-      @include span-columns(6);
+      @include span-columns(12);
     }
 
     @include media($mobile) {
